[package]

name = "staticfile"
version = "0.0.6"
authors = ["Zach Pomerantz <zmp@umich.edu>", "Jonathan Reem <jonathan.reem@gmail.com>"]
description = "Static file serving for Iron."
repository = "https://github.com/iron/staticfile"
license = "MIT"

[features]
cache = ["filetime"]

[dependencies]
iron = { version = "0.2", default-features = false }
time = "0.1"
log = "0.3"

[dependencies.filetime]
version = "0.1"
optional = true

[dev-dependencies]
iron-test = "0"
hyper = "0.6"
router = "0"

[dependencies.mount]
git = "https://github.com/mvdnes/mount"
branch = "no_ssl"
